--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "mongoose": "^5.10.16"
+    "mongoose": "^5.10.16",
+    "openssl": "^1.1.0"
   }
 }
