--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^3.1.5",
-    "express": "^4.17.1",
-    "mongoose": "^5.10.16",
+    "ejs": "^3.1.6",
+    "express": "^4.17.3",
+    "mongoose": "^5.13.14",
+    "nodemon": "^2.0.15",
     "openssl": "^1.1.0"
   }
 }
